        Class NormalSurface, NormalHypersurface:
            - Fixed a bug where, if a surface was a normalised triangle link
              but not a thin triangle link, then calling isThinTriangleLink()
              _before_ isNormalTriangleLink() would make the latter return
              an empty list of results.  Likewise with tetrahedron links in
              4-dimensional triangulations.
        Class Packet:
            - Renamed ChangeEventSpan to PacketChangeSpan, to make it clear
              that this only matters for objects held by packets.  The old
              name is kept as a deprecated alias.
            - New inner type alias PacketChangeGroup, to assist with readability
              when using a ChangeEventSpan for optimisation purposes only.
        Class PacketData<Held>:
            - Renamed ChangeEventSpan to PacketChangeSpan, to make it clear
              that this only matters for objects held by packets.  The old
              name is kept as a deprecated alias.
            - New inner type alias PacketChangeGroup, to assist with readability
              when using a ChangeEventSpan for optimisation purposes only.
            - The inner ChangeEventSpan class has a new member function held().
        Class Perm<n>:
            - New routine hash().
            - New class constant degree.
            - Added an alias Perm<6>::cachedOrder(), for consistency with the
              other permutation classes Perm<2..15>.
        Class Rational:
            - New function str().
        Class SatAnnulus:
            - Routine attachLST() now checks its preconditions, and throws
              an exception if they fail.
        Class Simplex<dim>:
            - New routines lock(), lockFacet(), unlock(), unlockFacet(),
              unlockAll(), isLocked(), isFacetLocked(), and lockMask().
        Class TightEncodable<T>:
            - Now provides a hash() function also, based on the tight encoding.